<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Case3Activity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cas_3"
        style="@style/TextAppearance.MaterialComponents.Headline2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/pseudoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pseudo"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:labelFor="@id/pseudoEdit" />

    <EditText
        android:id="@+id/pseudoEdit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:inputType="text"
        android:hint="@string/pseudo_hint"
        android:textColor="#000000"
        android:textColorHint="#555555"
        android:backgroundTint="#CCCCCC"
        android:importantForAutofill="yes"
        android:autofillHints="username"
        android:layout_gravity="center_horizontal"
        tools:ignore="TextContrastCheck,LabelFor,TextTooWide" />
    <TextView
        android:id="@+id/pseudoError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:importantForAccessibility="yes"
        android:accessibilityLiveRegion="assertive"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/pseudoSuggestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:visibility="gone"
        android:importantForAccessibility="yes"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/validate"
        android:enabled="false"
        android:contentDescription="@string/validate_button_description" />
</LinearLayout>
